client/report/report.css
* {
    z-index: 5;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

input {
    font-size: 4vw;
    width: 100vw;
    height: 10vh;
    border: 5px solid black;
    padding: 1vw;
}

#return {
    position: absolute;
    text-decoration: none;
    bottom: 0vh;
    width: 100vw;
    height: 12vh;
    border-top: 10px solid black;
    font-size: 10vh;
    display: flex;
    align-items: center;
    justify-content: center;
    background: peachpuff;
    color: rgb(249, 58, 90);
    border-color: rgba(255, 145, 0, 0.848);
}

input::placeholder {
    padding: 1vw;
    font-size: 4vw;
}

h1 {
    display: center;
    text-align: center;
    font-size: 10vh;
}

body {
    height: 90vh;
    margin: 0;

    background: linear-gradient(to bottom right,pink,purple);
}

#submit {
    width: 100vw;
    height: 13vh;
    font-size: 10vh;
    border: 5px solid black;
    background: rgb(22, 188, 22);
    border-color: green;
    transition: 200ms ease-in

}

#submit:hover {
    cursor: pointer;
    background: peachpuff;
    border-color: gray;
    transition: 200ms ease-in
}

input, #submit {
    transform: translate(0,20vh);
}

